fix: Adjust CSS for improved layout and scrollbar behavior in sheet component

--- a/src/styles/sheet.css
+++ b/src/styles/sheet.css
@@ -15,6 +15,7 @@ body:has(.sheet:popover-open) {
 html:not(:has(.sheet:popover-open)),
 body:not(:has(.sheet:popover-open)) {
     scrollbar-width: none;
+
     #root {
         transform: scale(1);
         transition:
@@ -32,7 +33,7 @@ body:not(:has(.sheet:popover-open)) {
     @starting-style {
         transform: translateY(100%);
     }
-    
+
     &::after {
         background-color: var(--surface);
         content: '';
@@ -63,7 +64,7 @@ body:not(:has(.sheet:popover-open)) {
     transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
     transition-behavior: allow-discrete;
 
-    > * {
+    >* {
         width: min(750px, 100%);
         margin-inline: auto;
     }
@@ -95,11 +96,11 @@ body:not(:has(.sheet:popover-open)) {
 }
 
 .sheet section {
-    overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-color: var(--gray-2) transparent;
     align-self: stretch !important;
-    height: 100%;
+    height: 60vh;
+    overflow-y: auto;
     min-height: 1rem;
     flex: 1;
 }
